feat: Prix dynamique via entité + seuils adaptés par type d'appareil
- Ajout de CONF_PRICE_ENTITY pour sélectionner une entité (input_number/sensor) pour le prix
- Le prix peut être dynamique (depuis une entité) ou fixe (valeur manuelle)
- Ajout de APPLIANCE_PROFILES avec des seuils optimisés pour chaque type:
  * Four: 100W démarrage, alerte 2h
  * Lave-vaisselle: 20W démarrage, alerte 3h
  * Lave-linge: 10W démarrage, alerte 3h
  * Sèche-linge: 100W démarrage, alerte 2h
  * Chauffe-eau: 1000W démarrage, alerte 4h
  * Machine à café: 50W démarrage, alerte 30min
  * Autre: valeurs par défaut standards

Modifications:
- const.py: Ajout CONF_PRICE_ENTITY + APPLIANCE_PROFILES
- config_flow.py: Sélecteur entité prix + utilisation profils
- coordinator.py: Méthode _get_current_price() + propriété price_kwh
- Traductions FR/EN mises à jour

Les seuils par défaut s'adaptent maintenant automatiquement au type d'appareil sélectionné.

--- a/custom_components/smart_appliance_monitor/translations/fr.json
+++ b/custom_components/smart_appliance_monitor/translations/fr.json
@@ -9,6 +9,7 @@
           "appliance_type": "Type d'appareil",
           "power_sensor": "Capteur de puissance",
           "energy_sensor": "Capteur d'énergie",
+          "price_entity": "Entité du prix (optionnel)",
           "price_kwh": "Prix du kWh (€)"
         },
         "data_description": {
@@ -16,7 +17,8 @@
           "appliance_type": "Type d'appareil électroménager",
           "power_sensor": "Capteur de puissance de la prise connectée (W)",
           "energy_sensor": "Capteur d'énergie de la prise connectée (kWh)",
-          "price_kwh": "Coût de l'électricité par kWh"
+          "price_entity": "Entité input_number ou sensor pour le prix dynamique (laissez vide pour utiliser une valeur fixe)",
+          "price_kwh": "Coût de l'électricité par kWh (utilisé si aucune entité n'est sélectionnée)"
         }
       }
     },
