feat: Ajout flux de reconfiguration pour modifier tous les paramètres
Nouvelle fonctionnalité majeure: bouton 'Reconfigurer' dans l'intégration

Permet de modifier TOUS les paramètres de base sans supprimer l'intégration:
- ✅ Nom de l'appareil
- ✅ Type d'appareil (+ adaptation auto des seuils)
- ✅ Capteurs de puissance/énergie
- ✅ Entité du prix dynamique
- ✅ Prix fixe du kWh

Les statistiques et historiques sont CONSERVÉS !

Implémentation:
- config_flow.py: Ajout async_step_reconfigure()
  * Pré-remplit le formulaire avec valeurs actuelles
  * Valide les nouveaux capteurs
  * Met à jour entry.data
  * Recharge l'intégration automatiquement

- Traductions FR/EN:
  * Nouveau step 'reconfigure' avec descriptions
  * Message de succès 'reconfigure_successful'

- Documentation:
  * RECONFIGURE_GUIDE.md: Guide complet d'utilisation
  * Cas d'usage pratiques
  * Différences avec Configuration Avancée
  * Dépannage

Cas d'usage:
- Changer type appareil pour optimiser seuils
- Passer de prix fixe à dynamique
- Remplacer prise connectée défectueuse
- Corriger erreur de config initiale

Technique:
- Utilise async_update_entry() + async_reload()
- Compatible Home Assistant ≥ 2023.4
- Validation des capteurs avant application
- Abort avec message de confirmation

--- a/custom_components/smart_appliance_monitor/translations/fr.json
+++ b/custom_components/smart_appliance_monitor/translations/fr.json
@@ -20,6 +20,26 @@
           "price_entity": "Entité input_number ou sensor pour le prix dynamique (laissez vide pour utiliser une valeur fixe)",
           "price_kwh": "Coût de l'électricité par kWh (utilisé si aucune entité n'est sélectionnée)"
         }
+      },
+      "reconfigure": {
+        "title": "Reconfigurer {appliance_name}",
+        "description": "Modifier les paramètres de base de l'appareil. Les statistiques seront conservées.",
+        "data": {
+          "appliance_name": "Nom de l'appareil",
+          "appliance_type": "Type d'appareil",
+          "power_sensor": "Capteur de puissance",
+          "energy_sensor": "Capteur d'énergie",
+          "price_entity": "Entité du prix (optionnel)",
+          "price_kwh": "Prix du kWh (€)"
+        },
+        "data_description": {
+          "appliance_name": "Nom descriptif de votre appareil (ex: Four, Lave-vaisselle)",
+          "appliance_type": "Type d'appareil électroménager - les seuils s'adapteront automatiquement",
+          "power_sensor": "Capteur de puissance de la prise connectée (W)",
+          "energy_sensor": "Capteur d'énergie de la prise connectée (kWh)",
+          "price_entity": "Entité input_number ou sensor pour le prix dynamique (laissez vide pour utiliser une valeur fixe)",
+          "price_kwh": "Coût de l'électricité par kWh (utilisé si aucune entité n'est sélectionnée)"
+        }
       }
     },
     "error": {
@@ -28,7 +48,8 @@
       "unknown": "Erreur inattendue"
     },
     "abort": {
-      "already_configured": "Cet appareil est déjà configuré"
+      "already_configured": "Cet appareil est déjà configuré",
+      "reconfigure_successful": "Reconfiguration réussie ! L'intégration a été rechargée avec les nouveaux paramètres."
     }
   },
   "options": {
