--- a/custom_components/smart_appliance_monitor/translations/fr.json
+++ b/custom_components/smart_appliance_monitor/translations/fr.json
@@ -3,42 +3,34 @@
     "step": {
       "user": {
         "title": "Ajouter Smart Appliance Monitor",
-        "description": "Configurer la surveillance de votre appareil",
+        "description": "Configurer la surveillance de votre appareil. Note : Le prix de l'énergie est maintenant configuré globalement via le service set_global_config.",
         "data": {
           "appliance_name": "Nom de l'appareil",
           "appliance_type": "Type d'appareil",
           "power_sensor": "Capteur de puissance",
-          "energy_sensor": "Capteur d'énergie",
-          "price_entity": "Entité du prix (optionnel)",
-          "price_kwh": "Prix du kWh (€)"
+          "energy_sensor": "Capteur d'énergie"
         },
         "data_description": {
           "appliance_name": "Nom descriptif de votre appareil (ex: Four, Lave-vaisselle)",
           "appliance_type": "Type d'appareil électroménager",
           "power_sensor": "Capteur de puissance de la prise connectée (W)",
-          "energy_sensor": "Capteur d'énergie de la prise connectée (kWh)",
-          "price_entity": "Entité input_number ou sensor pour le prix dynamique (laissez vide pour utiliser une valeur fixe)",
-          "price_kwh": "Coût de l'électricité par kWh (utilisé si aucune entité n'est sélectionnée)"
+          "energy_sensor": "Capteur d'énergie de la prise connectée (kWh)"
         }
       },
       "reconfigure": {
         "title": "Reconfigurer {appliance_name}",
-        "description": "Modifier les paramètres de base de l'appareil. Les statistiques seront conservées.",
+        "description": "Modifier les paramètres de base de l'appareil. Les statistiques seront conservées. Note : Le prix de l'énergie est maintenant configuré globalement via le service set_global_config.",
         "data": {
           "appliance_name": "Nom de l'appareil",
           "appliance_type": "Type d'appareil",
           "power_sensor": "Capteur de puissance",
-          "energy_sensor": "Capteur d'énergie",
-          "price_entity": "Entité du prix (optionnel)",
-          "price_kwh": "Prix du kWh (€)"
+          "energy_sensor": "Capteur d'énergie"
         },
         "data_description": {
           "appliance_name": "Nom descriptif de votre appareil (ex: Four, Lave-vaisselle)",
           "appliance_type": "Type d'appareil électroménager - les seuils s'adapteront automatiquement",
           "power_sensor": "Capteur de puissance de la prise connectée (W)",
-          "energy_sensor": "Capteur d'énergie de la prise connectée (kWh)",
-          "price_entity": "Entité input_number ou sensor pour le prix dynamique (laissez vide pour utiliser une valeur fixe)",
-          "price_kwh": "Coût de l'électricité par kWh (utilisé si aucune entité n'est sélectionnée)"
+          "energy_sensor": "Capteur d'énergie de la prise connectée (kWh)"
         }
       }
     },
