--- a/custom_components/smart_appliance_monitor/translations/fr.json
+++ b/custom_components/smart_appliance_monitor/translations/fr.json
@@ -229,6 +229,7 @@
         "nas": "NAS",
         "printer_3d": "Imprimante 3D",
         "vmc": "VMC",
+        "air_conditioner": "Climatisation",
         "other": "Autre"
       }
     },
